Thu Apr 26 18:47:49 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * examples/iccm/Button/tron/Button.idl:
        * examples/iccm/Button/tron/descriptors/ButtonDeployment.cdp:
        * examples/iccm/Button/tron/models/Button.mga:

          Added attributes to the Button for managing the reporter timeunit
          and timeout periods.

Mon Apr 23 17:21:17 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tron/deployment/Tron_Component_Instance_Handler.h:
        * cuts/iccm/arch/tron/deployment/Tron_Component_Instance_Handler.cpp:

          Modified to pass TronAdapterParams to the adapter

        * cuts/iccm/arch/tron/deployment/Tron_Deployment_Handler.h:
        * cuts/iccm/arch/tron/deployment/Tron_Deployment_Handler.cpp:

          Modified to set the TimeUnit and Timeout parameters on the reporter
          based on TronAdapterParams

Mon Apr 23 16:23:26 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * examples/iccm/Button/tron/descriptors/ButtonDeployment.cdp:
        * examples/iccm/Button/tron/models/Button.mga:

          Added TronAdapterParams to set reporter time unit and timeout

Mon Apr 23 15:12:54 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tron/deployment/Tron_Consumer_List.h:
        * cuts/iccm/arch/tron/servant/Tron_Servant.mpc:

          Moved implementation of default ctor and dtor into the header
          file to reduce servant/deployment dependency with the previous
          fix.  Thanks James!

        * cuts/iccm/arch/tron/deployment/Tron_Consumer_List.inl:
        * cuts/iccm/arch/tron/deployment/Tron_Consumer_List.cpp:

          Removed these files.

Mon Apr 23 13:11:39 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/tron/deployment/Tron_Component_Instance_Handler.h:
        * cuts/iccm/arch/tron/deployment/Tron_Component_Instance_Handler.cpp:
