@@ -1,3 +1,10 @@
+Thu May  3 19:12:21 UTC 2012  Dennis Feiock <dfeiock at iupui dot edu>
+
+        * cuts/utils/logging/client/logger/Format_Parser.h:
+        * cuts/utils/logging/client/logger/Format_Parser.cpp:
+
+          Fixed compilation errors with GCC.
+
 Thu Apr 26 18:47:49 UTC 2012  Dennis Feiock  <dfeiock at iupui dot edu>
 
         * examples/iccm/Button/tron/Button.idl:
